--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -2,18 +2,19 @@
 <div x-data="editorMain" class="flex flex-col w-full h-full min-h-0">
   <!-- Top bar -->
   <div
-    class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/40 dark:border-vls/40 dark:bg-vdp bg-white shadow">
+    class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/60 dark:border-vls/40 dark:bg-vdp bg-white shadow-md">
     <div
+      x-data="tooltip('Cannot change clients while editing.', !$store.edit.editing ? { hidden: true } : { hidden: false })"
       @click="if ($store.edit.editing) { 
               callWarning('Cannot change clients', 'Finish editing and try again'); 
             } else { 
               $store.clients.showClientModal = true;
             }"
-      class="cursor-pointer">
+      :class="$store.edit.editing ? 'cursor-not-allowed' : 'cursor-pointer'">
       <button
         id="clientSelectBtn"
         :disabled="$store.edit.editing"
-        class="modal-btn-prim disabled:opacity-50 disabled:pointer-events-none">
+        class="modal-btn-prim disabled:opacity-50 disabled:pointer-events-none shadow">
         Select Client
       </button>
     </div>
@@ -25,42 +26,48 @@
 
   <div class="flex flex-1 min-h-0">
     <!-- Invoice List on the left -->
-    <div class="flex flex-col min-w-[260px] w-[30%] overflow-hidden">
-      <div class="p-4 bg-vlp dark:bg-vdp shadow rounded border border-vls/40">
+    <div class="flex flex-col min-w-[260px] w-[35%] overflow-hidden">
+      <div class="p-2 bg-vlp dark:bg-vdp shadow rounded border border-vls/60">
         <div class="w-full flex justify-between">
-          <p class="mb-2 font-medium text-vls3 dark:text-vds">Invoice Book</p>
+          <p class="mb-2 font-semibold text-vls2 dark:text-vds">Invoice Book</p>
         </div>
         <input id="search-invoices-invoice-book" type="text" placeholder="Search invoices..." class="srch-style" />
       </div>
 
       <!-- Scrollable List -->
       <div
-        class="overflow-y-auto h-full bg-vlp dark:bg-vdp2 table-scrollbar p-2 invoice-book-scroll border shadow rounded border-vls/40 my-2">
+        class="overflow-y-auto h-full bg-vlp dark:bg-vdp2 table-scrollbar p-2 border shadow-md rounded border-vls/60 mt-2">
         <template x-for="item in $store.edit.invoiceBook" :key="item.id">
-          <div @click="$store.edit.fetchInvoice(item.id)" :id="'rowid-' + item.id" class="mb-2">
+          <div @click="$store.edit.fetchInvoice(item.id)" :id="'rowid-' + item.id" class="mb-6">
             <!-- Invoice Item Content-->
             <div
               :class="{
-              'ring-2 dark:ring-1 ring-vls2/60 bg-vlp dark:bg-[#27272A] dark:ring-vda2/50 dark:text-white shadow-md': item.id === $store.edit.activeItemId,
-              'ring-1 ring-vls/40 dark:ring-0 dark:bg-vds3neu700 dark:hover:bg-vds2 bg-vlp dark:bg-vdp2/40 dark:text-vds shadow-md': item.id !== $store.edit.activeItemId
+                // Active item
+              'ring-1 dark:ring-1 ring-vls2 bg-vlp dark:bg-[#27272A] dark:ring-vda2/50 dark:text-white ': item.id === $store.edit.activeItemId,
+                // Inactive item
+              'ring-1 ring-vls/40 dark:ring-0 dark:bg-vds3neu700 dark:hover:bg-vds2 bg-vlp dark:bg-vdp2/40 dark:text-vds shadow-md hover:shadow-lg hover:ring-vls': item.id !== $store.edit.activeItemId
             }"
               class="relative z-50 flex justify-between cursor-pointer shadow rounded p-2 text-vls2 transition-all focus:outline-none focus-visible:outline-none">
               <!-- Bookmark Icon with Tooltip -->
-              <div x-data="tooltip(`${item.invoice_status}`)" class="absolute -top-0.5 right-3">
+              <div
+                x-data="tooltip(`Status:${item.invoice_status}\n Click to change.`)"
+                class="absolute -top-[0.2rem] right-3 hover:animate-pulse">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
                   fill="currentColor"
-                  class="size-4"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  class="size-5"
                   :class="{
                   'text-vla2/80 dark:text-vla2': item.invoice_status === 'paid',
-                  'text-red-500/80': item.invoice_status === 'unpaid',
+                  'text-red-500/70 ': item.invoice_status === 'unpaid',
                   'text-yellow-300 dark:text-yellow-400/70': item.invoice_status === 'partially paid'
                 }">
                   <path
-                    fill-rule="evenodd"
-                    d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z"
-                    clip-rule="evenodd" />
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0 1 11.186 0Z" />
                 </svg>
               </div>
               <!-- Invoice Info -->
@@ -70,9 +77,9 @@
                 <div class="flex text-xs mt-1" x-text="item.invoice_number"></div>
               </div>
               <!-- Bottom Icons -->
-              <div class="flex justify-end items-end mt-auto pt-2">
+              <div class="flex justify-end items-end mt-auto pt-2 mr-1.5">
                 <!-- Deposit Icon -->
-                <div x-show="item.deposit_value > 0">
+                <div x-show="item.deposit_value > 0" class="mr-1">
                   <div x-data="tooltip('Contains a deposit')">
                     <button class="table-interaction-icon-red !scale-100 hover:!text-vla" @click.stop>
                       <svg class="size-4">
@@ -89,7 +96,7 @@
     Total: £${item.total}
     Deposit: ${item.deposit_type === 1 ? item.depoVal_ifPercent + '%' : '£' + item.deposit_value}`)"
                   @click.stop
-                  class="table-interaction-icon-blue !scale-100">
+                  class="table-interaction-icon-blue !scale-100 mr-1">
                   <svg class="size-4">
                     <use href="/icons/icons2.svg#deets-ic" />
                   </svg>
@@ -150,41 +157,39 @@
                   <!-- Scrollable Dropdown Content -->
                   <div
                     :class="open ? 'max-h-[18vh] overflow-y-auto p-2 shadow-md' : 'max-h-0 overflow-hidden'"
-                    class="relative transition-all duration-300 border-vls/40"
+                    class="relative transition-all duration-300"
                     x-ref="content">
-                    <ul class="space-y-1 p-2 text-xs">
+                    <ul class="space-y-2 p-1 text-xs">
                       <template x-for="invoice in $store.edit.copyInvoices[item.id] || []" :key="invoice.id">
                         <li
-                          @click.stop="if($store.edit.editing) { callWarning('Cannot copy invoices', 'Finish editing and try again') }"
-                          class="p-1 bg-vlp2 dark:bg-vdp2 dark:hover:bg-vdp3 rounded-md cursor-pointer text-vls3 dark:text-vds shadow-sm hover:bg-vlp3 border hover:text-vls2 transition duration-300"
-                          :class="invoice.isDeletable ? 'border border-vla2 dark:border-vda2 font-semibold dark:font-normal' : 'border-vls2/40'">
-                          <div>
-                            <div class="flex justify-between items-center text-xs">
-                              <span x-text="invoice.number"></span>
-                              <div class="flex items-center">
-                                <!-- Non-deletable delete button -->
-                                <template x-if="!invoice.isDeletable">
-                                  <div x-data="tooltip('Cannot delete this invoice \nwhile newer copies exist.')">
-                                    <button
-                                      @click.stop="callWarning('Cannot delete this invoice', 'while newer copies exist.')"
-                                      class="text-gray-500 cursor-not-allowed p-1">
-                                      <svg class="size-4">
-                                        <use href="/icons/icons.svg#trash" />
-                                      </svg>
-                                    </button>
-                                  </div>
-                                </template>
-                                <!-- Deletable delete button -->
-                                <template x-if="invoice.isDeletable">
+                          @click.stop="if($store.edit.editing) { callWarning('Cannot copy invoices', 'Finish editing and try again') }; $store.edit.fetchInvoiceCopy(invoice.id)"
+                          class="px-2 py-0.5 hover:bg-vlp dark:bg-vdp2 dark:hover:bg-vdp3 rounded-md cursor-pointer text-vls3 dark:text-vds bg-blue-50 border hover:text-vls2 transition duration-300"
+                          :class="invoice.isDeletable ? 'border border-spacing-2 border-vla2 dark:border-vda font-semibold dark:font-normal' : 'border-vls2/40'">
+                          <div class="flex justify-between items-center text-xs">
+                            <span x-text="invoice.number"></span>
+                            <div class="flex items-center">
+                              <!-- Non-deletable  -->
+                              <template x-if="!invoice.isDeletable">
+                                <div x-data="tooltip('Cannot delete this invoice \nwhile newer copies exist.')">
                                   <button
-                                    @click="$store.edit.deleteCopiedInvoice(invoice.id, item.id)"
-                                    class="table-interaction-icon-red !p-0">
+                                    @click.stop="callWarning('Cannot delete this invoice', 'while newer copies exist.')"
+                                    class="text-gray-400 cursor-not-allowed p-1">
                                     <svg class="size-4">
                                       <use href="/icons/icons.svg#trash" />
                                     </svg>
                                   </button>
-                                </template>
-                              </div>
+                                </div>
+                              </template>
+                              <!-- Deletable delete button -->
+                              <template x-if="invoice.isDeletable">
+                                <button
+                                  @click="$store.edit.deleteCopiedInvoice(invoice.id, item.id)"
+                                  class="table-interaction-icon-red !p-0.5">
+                                  <svg class="size-4">
+                                    <use href="/icons/icons.svg#trash" />
+                                  </svg>
+                                </button>
+                              </template>
                             </div>
                           </div>
                         </li>
@@ -196,9 +201,6 @@
             </template>
           </div>
         </template>
-      </div>
-
-      <div class="flex w-full justify-between p-4 border bg-vlp dark:bg-vdp border-vls/40 rounded shadow">
         <div class="mt-4 text-center" x-show="$store.edit.hasMore">
           <button
             @click="$store.edit.fetchListById()"
