--- a/public/html/invoices/invoiceSection.html
+++ b/public/html/invoices/invoiceSection.html
@@ -1,6 +1,6 @@
 <div
   x-data="invoicing"
-  class="mb-12 text-xs border rounded border-vls/40 text-vlp dark:border-vls/40 dark:text-vds bg-white dark:bg-vdp2 shadow">
+  class="mb-12 text-xs border rounded border-vls/60 text-vlp dark:border-vls/40 dark:text-vds bg-white dark:bg-vdp2 shadow-md">
   <div class="grid grid-cols-3 p-2 mb-4">
     <!-- INVOICE ITEMS -->
     <div>
