--- a/public/html/invoices/totals.html
+++ b/public/html/invoices/totals.html
@@ -1,7 +1,7 @@
 <div x-data="totalsInvoice" class="text-xs flex w-full">
   <!-- MARK: MAIN PRICE MENU - INVOICE SUMMARY -->
   <div
-    class="text-sm flex flex-col w-[30%] p-4 gap-4 mr-2 bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow dark:shadow">
+    class="text-sm flex flex-col w-[30%] p-4 gap-4 mr-2 bg-vlp rounded border-vls/60 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow-md dark:shadow">
     <h2 class="font-semibold text-base leading-tight text-vls2/90 dark:text-vds3light">Invoice Summary</h2>
 
     <h3 class="flex justify-between">
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div
-    class="flex w-[70%] p-4 items-end bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow dark:shadow">
+    class="flex w-[70%] p-4 items-end bg-vlp rounded border-vls/60 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow-md dark:shadow">
     <!-- NotePopup Discount Deposit -->
     <div class="flex flex-col justify-between h-full w-full">
       <!-- Note Section -->
