--- a/public/html/invoices/tabsInvoice.html
+++ b/public/html/invoices/tabsInvoice.html
@@ -3,21 +3,21 @@
   <template x-if="$store.clients.selectedClient !== null">
     <div>
       <div
-        class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/40 dark:border-vls/40 dark:bg-vdp bg-white shadow">
-        <button @click="$store.clients.showClientModal = true" class="modal-btn-prim">
+        class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/60 dark:border-vls/40 dark:bg-vdp bg-white shadow-md">
+        <button @click="$store.clients.showClientModal = true" class="modal-btn-prim shadow">
           <svg class="size-4">
             <use href="/icons/icons.svg#select-client" />
           </svg>
           Select Client
         </button>
         <h3
-          class="self-center text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
+          class="self-center font-medium text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
           x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
       </div>
 
       <!-- MARK: TABS ALPINE -->
       <div class="relative w-full max-w-full mb-12">
-        <div x-ref="invoicingTabButtons" class="mb-2 toggler shadow">
+        <div x-ref="invoicingTabButtons" class="mb-2 toggler shadow-md border border-vls/60">
           <!-- Styles Tab Button -->
           <button
             :id="$id(invoicingTabId)"
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div
-          class="relative text-xs border rounded shadow bg-white dark:bg-vdp2 dark:shadow border-vls/40 text-vlp dark:text-vds">
+          class="relative text-xs border rounded shadow-md bg-white dark:bg-vdp2 dark:shadow border-vls/60 text-vlp dark:text-vds">
           <div :id="$id(invoicingTabId + '-content')" x-show="invoicingTabContentActive($el)" class="relative p-2">
             <!-- MARK:STYLES -->
             <div class="flex justify-between align-middle mb-2">
