--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
           <div
             x-show="$store.clients.clients.length > 0 && $store.clients.selectedClient !== null"
             x-html="tabHtml"
-            class="2xl:max-w-[80%] xl:max-w-[70%] mx-auto flex flex-col h-full min-h-0"></div>
+            class="2xl:max-w-[80%] mx-auto flex flex-col h-full min-h-0"></div>
           <!-- MARK: CREATE CLIENT MODAL -->
           <div
             x-show="$store.clients.showAddClientModal"
